Add permission checks for /cycle command and update related tests
- Implemented permission checks to restrict access to the /cycle command.
- Added unit tests to verify permission enforcement and command handling.
- Updated README.md to document the new permission requirements.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,8 @@ commands:
     usage: /cycle setcycle <n> | /cycle cycle-now | /cycle status
     permission: thecycle.cycle
     permission-message: You do not have permission to use that command.
+
+permissions:
+  thecycle.cycle:
+    description: Allows running /cycle and forwarding cycle requests from lobby to hardcore
+    default: op
