Add embedded HTTP RPC server and related utilities for hardcore backend

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -13,3 +13,9 @@ permissions:
   thecycle.cycle:
     description: Allows running /cycle and forwarding cycle requests from lobby to hardcore
     default: op
+
+channels:
+  # Declare plugin messaging channels used by this plugin. Some server/proxy environments
+  # prefer channels be declared in plugin.yml in addition to runtime registration.
+  - BungeeCord
+  - thecycle:rpc
